// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly render ExpensesSummary with 1 expens 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.35
  </h1>
</div>
`;

exports[`correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $235,123,409.87
  </h1>
</div>
`;
